<resources>
    <string name="app_name">Flexo Calculations</string>

    <string name="flexo_calaculations_notification_title_template">Flexo calaculations: %1$s
    </string>

    <!-- TODO: remove this placeholder text -->
    <string name="flexo_calaculations_notification_placeholder_text_template">You said %1$s and
        lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum,
        velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed
        turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem,
        ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet
        turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat
        nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="jednostka_metr">m</string>
    <string name="jednostka_procent">%</string>
    <string name="jednostka_cm">cm</string>
    <string name="jednostka_mm">mm</string>
    <string name="jednostka_kg">kg</string>
    <string name="button_paintRequire_text">Szacuj ilość farby</string>
    <string name="odpad_label">Szacunkowy Odpad</string>
    <string name="wynikNetto_label">Szacunkowe zużycie netto</string>
    <string name="wynik_label">Szacunkowe zużycie</string>
    <string name="menu_setting_label">Ustawienia</string>
    <string name="menu_exit_label">Wyjście</string>
    <string name="menu_info_label">Info</string>
    <string name="app_main_title"></string>
    <string name="app_main_subtitle"></string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="dialog_text">Info na temat aplikacji</string>
    <string name="dialog_title"></string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="procent_odpadu_preference_defaultValue">0.05</string>
    <string name="ust_grup_label_odpad">Kalkulacja odpadu</string>
    <string name="ust_label_anilox">Pojemność aniloxa</string>
    <string name="ust_zalanie_kg">Ilość farby na zalanie kałamarza</string>
</resources>
